# rust-cross-compile

./: Cargo.toml  LEEME.txt
.cargo/: config.toml
examples/: log_example.rs  qr_reader_example.rs  serial_println.rs
src/: lib.rs  main.rs  qr_reader.rs  tcp_server.rs
