# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arm_cross_compile"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4" }
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1"
